Fixes scrollbar issue

--- a/src/stylesheets/main.sass
+++ b/src/stylesheets/main.sass
@@ -5,6 +5,7 @@ body
   font-size: 1em
   line-height: 1.4
   display: block
+  overflow: scroll
 
 h2
   font-family: 'Merriweather Sans'
